<resources>
    <string name="app_name">Học Tiếng Anh</string>
    <string name="empty_note">Bạn Không Có Ghi Chú Nào !!!</string>
    <string name="title">Tiêu Đề</string>
    <string name="input_title">Nhập Tiêu Đề</string>
    <string name="content">Nội Dung</string>
    <string name="input_content">Nhập Nội Dung</string>
    <string name="edit_complete">Sửa Thành Công</string>
    <string name="add_complete">Thêm Thành Công</string>
    <string name="delete_complete">Xóa Thành Công</string>
    <string name="edit">Sửa</string>
    <string name="add">Thêm</string>
    <string name="new_note">Ghi Chú Mới</string>
    <string name="search">Tìm Kiếm</string>
    <string name="notify">Thông Báo</string>
    <string name="check_delete_note">Bạn Có Muốn Xóa Ghi Chú Này Không</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="check_exit">Nhấn Một Lần Nữa Để Thoát</string>
    <string name="retry">Thử Lại</string>
    <string name="back">Trở Lại</string>
    <string name="format_time">dd/MM/yyyy</string>
    <string name="format_time_short">dd/MM/yyyy</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Have a nice afternoon !!!</string>
    <string name="good_evening">It\'s night, what are you doing ???</string>
</resources>