<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="note"
            type="com.example.notesapp.model.Note" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/note_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_note">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:text="@string/back"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:text="@string/add"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/container_note_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20ssp"
            android:background="@drawable/background_content_bottom"
            app:layout_constraintTop_toBottomOf="@id/add" />

        <EditText
            android:id="@+id/title_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:hint="@string/input_title"
            android:text="@={note.title}"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/container_note_detail" />

        <EditText
            android:id="@+id/content_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:hint="@string/input_content"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:text="@={note.content}"
            android:textColor="@color/black"
            android:textColorHint="@color/pale_white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintTop_toBottomOf="@id/title_note" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

